# Advanced-Information-Retrieval-System

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml
scripts/: build_index.py  demo_offline.py  evaluate.py  tune_weights.py
src/ir_system/: __init__.py  data.py  evaluation.py  fusion.py  indexing.py  optimization.py  pipeline.py
src/ir_system/rankers/: __init__.py  bert_reranker.py  bm25.py  elmo_ranker.py  gensim_ranker.py
tests/: test_evaluation.py  test_fusion.py  test_optimization.py
